[package]
name = "hello-account-client"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-client = "1.18"
solana-sdk = "1.18"
borsh = "0.10"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }

# Reference our program for shared types
hello-account-program = { path = "../program" }
